--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
       .custom-scrollbar::-webkit-scrollbar-thumb:hover {
           background: #a8a8a8; 
       }
+      
+      /* Animations */
+      @keyframes fadeIn {
+        from { opacity: 0; transform: translateY(10px); }
+        to { opacity: 1; transform: translateY(0); }
+      }
+      .animate-fade-in {
+        animation: fadeIn 0.5s ease-out forwards;
+      }
     </style>
   <script type="importmap">
 {
