--- a/index.html
+++ b/index.html
@@ -47,5 +47,7 @@
 </head>
   <body>
     <div id="root"></div>
+    <!-- CRITICAL FIX: Link to the entry point so the app actually loads on Vercel -->
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
