--- a/index.html
+++ b/index.html
@@ -5,9 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Finance Pro 360</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        darkMode: 'class',
+        theme: {
+          extend: {
+            colors: {
+              slate: {
+                750: '#2d3748',
+                850: '#1a202c',
+                950: '#020617',
+              }
+            },
+            fontFamily: {
+              sans: ['Inter', 'sans-serif'],
+            }
+          }
+        }
+      }
+    </script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
+      :root {
+        --tooltip-bg: #ffffff;
+        --tooltip-border: #e2e8f0;
+        --tooltip-text: #1e293b;
+      }
+      html.dark {
+        --tooltip-bg: #1e293b;
+        --tooltip-border: #334155;
+        --tooltip-text: #f8fafc;
+      }
+
       body { font-family: 'Inter', sans-serif; background-color: #f3f4f6; }
+      html.dark body { background-color: #020617; }
+
       /* Custom Scrollbar for table containers */
       .custom-scrollbar::-webkit-scrollbar {
           width: 8px;
@@ -22,6 +54,17 @@
       }
       .custom-scrollbar::-webkit-scrollbar-thumb:hover {
           background: #a8a8a8; 
+      }
+      
+      /* Dark mode scrollbar */
+      html.dark .custom-scrollbar::-webkit-scrollbar-track {
+          background: #0f172a; 
+      }
+      html.dark .custom-scrollbar::-webkit-scrollbar-thumb {
+          background: #334155; 
+      }
+      html.dark .custom-scrollbar::-webkit-scrollbar-thumb:hover {
+          background: #475569; 
       }
       
       /* Animations */
@@ -40,7 +83,8 @@
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0"
+    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0",
+    "@supabase/supabase-js": "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm"
   }
 }
 </script>
