feat: Update dependencies and improve Supabase client setup
Refactors the Supabase client initialization to more robustly handle environment variables. Updates the Vite import map in index.html to ensure correct module resolution for external libraries. Adjusts tsconfig.json to include all relevant TypeScript files.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Finance Pro 360</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
-    <!-- Tailwind CSS via CDN (Versão Anterior restaurada) -->
+    <!-- Tailwind CSS via CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -29,7 +29,7 @@
       }
     </script>
 
-    <!-- Estilos Globais restaurados -->
+    <!-- Global Styles -->
     <style>
       :root {
         --tooltip-bg: #ffffff;
@@ -88,17 +88,17 @@
         animation: fadeIn 0.5s ease-out forwards;
       }
     </style>
-  <script type="importmap">
+<script type="importmap">
 {
   "imports": {
-    "react/": "https://aistudiocdn.com/react@^19.2.1/",
     "react": "https://aistudiocdn.com/react@^19.2.1",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.2",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.556.0",
+    "react/": "https://aistudiocdn.com/react@^19.2.1/",
     "recharts": "https://aistudiocdn.com/recharts@^3.5.1",
+    "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.87.1",
     "vite": "https://aistudiocdn.com/vite@^7.2.7",
-    "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.87.1"
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
