--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           background: #c1c1c1; 
           border-radius: 4px;
       }
-      .custom-scrollbar::-webkit-scrollbar-thumb:hover {
+      .custom-scrollbar::-webkit-scrollbar-thumb {
           background: #a8a8a8; 
       }
 
@@ -91,14 +91,17 @@
 <script type="importmap">
 {
   "imports": {
-    "react": "https://aistudiocdn.com/react@^18.3.1",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^18.3.1/",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.344.0",
-    "react/": "https://aistudiocdn.com/react@^18.3.1/",
-    "recharts": "https://aistudiocdn.com/recharts@^2.12.0",
-    "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.48.1",
-    "vite": "https://aistudiocdn.com/vite@^5.4.1",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^4.3.1"
+    "react": "https://esm.sh/react@18.3.1",
+    "react-dom/client": "https://esm.sh/react-dom@18.3.1/client",
+    "react-dom": "https://esm.sh/react-dom@18.3.1",
+    "lucide-react": "https://esm.sh/lucide-react@0.344.0?external=react,react-dom",
+    "recharts": "https://esm.sh/recharts@2.12.0?external=react,react-dom",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.48.1",
+    "vite": "https://esm.sh/vite@5.4.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@4.3.1",
+    "react/jsx-runtime": "https://esm.sh/react@18.3.1/jsx-runtime",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
+    "react/": "https://aistudiocdn.com/react@^19.2.1/"
   }
 }
 </script>
@@ -108,4 +111,3 @@
     <script type="module" src="/index.tsx"></script>
   </body>
 </html>
-    
