feat: Enhance UI and admin capabilities
Introduce new color schemes and update component styling for a more polished look. Add advanced admin functionalities, including manual profile creation and direct user license status updates, to streamline backend management. Modify `PurchaseRequest` and `User` types to accommodate new fields for improved data tracking and UI display.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
                 750: '#2d3748',
                 850: '#1a202c',
                 950: '#020617',
+              },
+              brand: {
+                blue: '#051b35',   // Deep Blue form image
+                gold: '#d4af37',   // Gold from image
+                light: '#e2e8f0',
+                accent: '#38bdf8'  // Light blue accent
               }
             },
             fontFamily: {
