feat: Improve SEO and add app domain constant
Enhance search engine optimization by adding meta tags for title, description, and Open Graph properties to the `index.html`. Also, introduce `APP_DOMAIN` constant in `constants.ts` for better domain management.

This change aims to improve the discoverability and social sharing capabilities of the Finance Pro 360 application.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Finance Pro 360</title>
+    <title>Finance Pro 360 | Gestão Financeira de Alta Performance</title>
+    <meta name="description" content="A plataforma definitiva para controle de gastos, investimentos e metas financeiras. Simplicidade de planilha com poder de dashboard.">
+    <meta property="og:title" content="Finance Pro 360">
+    <meta property="og:description" content="Organize sua vida financeira com o Finance Pro 360.">
+    <meta property="og:url" content="https://www.financepro360.com.br">
+    
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
     <!-- Tailwind CSS via CDN -->
@@ -70,7 +75,7 @@
           background: #c1c1c1; 
           border-radius: 4px;
       }
-      .custom-scrollbar::-webkit-scrollbar-thumb {
+      .custom-scrollbar::-webkit-scrollbar-thumb:hover {
           background: #a8a8a8; 
       }
 
