SEO Improvements: robots.txt, sitemap, meta tags, and SheetView fix

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta property="og:title" content="Finance Pro 360">
     <meta property="og:description" content="Organize sua vida financeira com o Finance Pro 360.">
     <meta property="og:url" content="https://www.financepro360.com.br">
+    <link rel="canonical" href="https://www.financepro360.com.br" />
     
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
