chore: remove temporary version tag v2.2

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Finance Pro 360 | Gestão Financeira de Alta Performance (v2.2)</title>
+  <title>Finance Pro 360 | Gestão Financeira de Alta Performance</title>
   <meta name="description"
     content="A plataforma definitiva para controle de gastos, investimentos e metas financeiras. Simplicidade de planilha com poder de dashboard.">
   <meta property="og:title" content="Finance Pro 360">
